--- a/musicpimp/src/main/res/menu/action_menu.xml
+++ b/musicpimp/src/main/res/menu/action_menu.xml
@@ -19,6 +19,9 @@
     <!--<item android:id="@+id/action_test"-->
           <!--android:icon="@drawable/ic_menu_help"-->
           <!--android:title="@string/test_text"/>-->
+    <item android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/action_search"/>
     <item android:id="@+id/action_refresh"
           android:icon="@android:drawable/ic_menu_more"
           android:title="@string/action_refresh"/>
