--- a/app/src/main/res/navigation/music.xml
+++ b/app/src/main/res/navigation/music.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/music_home"
-        android:name="org.musicpimp.ui.home.HomeFragment"
+        android:name="org.musicpimp.ui.music.RootMusicFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_music">
         <action
