--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,9 @@
         <item name="android:maxHeight">2dip</item>
     </style>
 
+    <style name="IconButton" parent="Widget.MaterialComponents.Button.Icon">
+        <item name="android:minHeight">2dip</item>
+        <item name="android:maxHeight">2dip</item>
+    </style>
+
 </resources>
