--- a/app/src/main/res/menu/music_top_nav_menu.xml
+++ b/app/src/main/res/menu/music_top_nav_menu.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_settings"
+        android:id="@+id/settings"
         android:icon="@drawable/ic_settings"
         android:menuCategory="secondary"
         android:title="@string/settings" />
