--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -3,25 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/no_track_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/no_track"
         android:textAlignment="center"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/playback_controls"
-        android:visibility="gone">
-
+        android:visibility="visible">
         <ImageView
             android:id="@+id/album_cover"
             android:layout_width="wrap_content"
@@ -33,56 +31,44 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
+            style="@style/PlaybackText"
             android:id="@+id/track_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
             android:textAlignment="center"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/album_cover"
             tools:text="Someone Like You" />
-
         <TextView
+            style="@style/PlaybackText"
             android:id="@+id/album_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
             android:textAlignment="center"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/track_text"
             tools:text="21" />
-
         <TextView
+            style="@style/PlaybackText"
             android:id="@+id/artist_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
             android:textAlignment="center"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/album_text"
             tools:text="Adele" />
-
         <TextView
+            style="@style/PlaybackText"
             android:id="@+id/position_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
             android:textAlignment="center"
             android:textSize="14sp"
             app:layout_constraintEnd_toStartOf="@id/duration_text"
@@ -91,14 +77,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/artist_text"
             tools:text="01:20" />
-
         <TextView
+            style="@style/PlaybackText"
             android:id="@+id/duration_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="12dp"
             android:textAlignment="center"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -106,17 +89,6 @@
             app:layout_constraintStart_toEndOf="@id/position_text"
             app:layout_constraintTop_toBottomOf="@id/artist_text"
             tools:text="04:23" />
-        <!--     I want this but can't seem to update it while it's visible? -->
-        <!--        <com.google.android.material.slider.Slider-->
-        <!--            android:id="@+id/player_slider"-->
-        <!--            android:layout_width="0dp"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:layout_weight="1"-->
-        <!--            android:valueFrom="0"-->
-        <!--            android:stepSize="0"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/position_text"/>-->
         <SeekBar
             android:id="@+id/player_slider"
             style="@style/ProgressBarHorizontal"
@@ -131,35 +103,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/position_text" />
-
         <Button
             android:id="@+id/prev_button"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="50dp"
+            style="@style/PlaybackButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             app:icon="@drawable/ic_skip_previous_24px"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/player_slider" />
-
         <Button
             android:id="@+id/play_pause_button"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="50dp"
+            style="@style/PlaybackButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             app:icon="@drawable/ic_play_arrow_24px"
-            app:iconGravity="start"
             app:layout_constraintEnd_toStartOf="@id/next_button"
             app:layout_constraintStart_toEndOf="@id/prev_button"
             app:layout_constraintTop_toBottomOf="@id/player_slider" />
-
         <Button
             android:id="@+id/next_button"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="50dp"
+            style="@style/PlaybackButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
             app:icon="@drawable/ic_skip_next_24px"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/player_slider" />
