--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -18,4 +17,16 @@
         <item name="android:maxHeight">2dip</item>
     </style>
 
+    <style name="PlaybackButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="android:layout_margin">12dp</item>
+        <item name="android:paddingStart">30dp</item>
+        <item name="android:paddingEnd">30dp</item>
+    </style>
+
+    <style name="PlaybackText" parent="Widget.MaterialComponents.TextView">
+        <item name="android:layout_marginStart">12dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginEnd">12dp</item>
+        <item name="android:textAlignment">center</item>
+    </style>
 </resources>
