--- a/app/src/main/res/navigation/player.xml
+++ b/app/src/main/res/navigation/player.xml
@@ -9,5 +9,16 @@
         android:id="@+id/player_home"
         android:name="org.musicpimp.ui.player.PlayerFragment"
         android:label="@string/title_player"
-        tools:layout="@layout/fragment_player" />
+        tools:layout="@layout/fragment_player">
+        <action
+            android:id="@+id/player_to_playlist"
+            app:destination="@id/playlist"
+            app:enterAnim="@anim/enter_from_right" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/playlist"
+        android:name="org.musicpimp.ui.music.PlaylistFragment"
+        android:label="@string/title_playlist"
+        tools:layout="@layout/fragment_playlist"/>
 </navigation>
