--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -25,7 +25,8 @@
             android:layout_height="0dp"
             android:layout_width="match_parent"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="12dp"
             android:layout_marginEnd="12dp"
             android:src="@drawable/ic_launcher_foreground"
             android:contentDescription="@string/cover"
