--- a/app/src/main/res/drawable/ic_add_foreground.xml
+++ b/app/src/main/res/drawable/ic_add_foreground.xml
@@ -3,7 +3,7 @@
     android:height="108dp"
     android:viewportWidth="41.37931"
     android:viewportHeight="41.37931"
-    android:tint="#000000">
+    android:tint="#2483e9">
   <group android:translateX="8.689655"
       android:translateY="8.689655">
       <path
