--- a/app/src/main/res/layout/appbar_music.xml
+++ b/app/src/main/res/layout/appbar_music.xml
@@ -14,7 +14,9 @@
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/app_name" />
+            android:background="@color/colorBackground"
+            app:title="@string/app_name"
+            app:titleTextColor="@color/colorTitles" />
     </com.google.android.material.appbar.AppBarLayout>
 
 </FrameLayout>
