--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -4,95 +4,106 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <TextView
         android:id="@+id/no_track_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/no_track"
         android:textAlignment="center"
+        android:textColor="@color/colorText"
+        android:textSize="18sp"
         android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/playback_controls"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/playback_controls"
         android:visibility="visible">
+
         <ImageView
             android:id="@+id/album_cover"
-            android:layout_height="0dp"
             android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
-            android:layout_marginBottom="12dp"
             android:layout_marginEnd="12dp"
-            android:src="@drawable/ic_launcher_foreground"
+            android:layout_marginBottom="12dp"
             android:contentDescription="@string/cover"
-            app:layout_constraintVertical_bias=".5"
+            android:src="@drawable/ic_launcher_foreground"
+            app:layout_constraintBottom_toTopOf="@id/track_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/track_text"/>
+            app:layout_constraintVertical_bias=".5" />
+
         <TextView
-            style="@style/PlaybackText"
             android:id="@+id/track_text"
+            style="@style/PlaybackText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="22sp"
+            app:layout_constraintBottom_toTopOf="@id/album_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/album_text"
             tools:text="Someone Like You" />
+
         <TextView
-            style="@style/PlaybackText"
             android:id="@+id/album_text"
+            style="@style/PlaybackText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@id/artist_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/artist_text"
             tools:text="21" />
+
         <TextView
-            style="@style/PlaybackText"
             android:id="@+id/artist_text"
+            style="@style/PlaybackText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@id/position_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/position_text"
             tools:text="Adele" />
+
         <TextView
-            style="@style/PlaybackText"
             android:id="@+id/position_text"
+            style="@style/PlaybackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@id/player_slider"
             app:layout_constraintEnd_toStartOf="@id/duration_text"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/player_slider"
             tools:text="01:20" />
+
         <TextView
-            style="@style/PlaybackText"
             android:id="@+id/duration_text"
+            style="@style/PlaybackText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textSize="14sp"
+            app:layout_constraintBottom_toTopOf="@id/player_slider"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toEndOf="@id/position_text"
-            app:layout_constraintBottom_toTopOf="@id/player_slider"
             tools:text="04:23" />
+
         <SeekBar
             android:id="@+id/player_slider"
             style="@style/ProgressBarHorizontal"
@@ -104,43 +115,47 @@
             android:indeterminate="false"
             android:min="0"
             android:progress="0"
+            app:layout_constraintBottom_toTopOf="@id/prev_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/prev_button"/>
+            app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/prev_button"
             style="@style/PlaybackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_skip_previous_24px"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <Button
             android:id="@+id/play_button"
             style="@style/PlaybackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_play_arrow_24px"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/next_button"
-            app:layout_constraintStart_toEndOf="@id/prev_button"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/prev_button" />
+
         <Button
             android:id="@+id/pause_button"
             style="@style/PlaybackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:icon="@drawable/ic_pause_24px"
-            app:layout_constraintEnd_toStartOf="@id/next_button"
-            app:layout_constraintStart_toEndOf="@id/prev_button"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"/>
+            app:layout_constraintEnd_toStartOf="@id/next_button"
+            app:layout_constraintStart_toEndOf="@id/prev_button" />
+
         <Button
             android:id="@+id/next_button"
             style="@style/PlaybackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:icon="@drawable/ic_skip_next_24px"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
