--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <!-- IDs of items must match IDs of resources under navigation/. For example, item ID nav_music
+    in this file matches navigation ID nav_music in navigation/music.xml -->
     <item
         android:id="@+id/nav_music"
         android:icon="@drawable/ic_library_music_foreground"
@@ -10,5 +11,10 @@
         android:id="@+id/nav_player"
         android:icon="@drawable/ic_play_circle_filled_foreground"
         android:title="@string/title_player" />
+
+    <item
+        android:id="@+id/nav_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/title_settings" />
 
 </menu>
