Add padding; rename

--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -50,6 +50,7 @@
             android:textAlignment="center"
             android:textColor="@color/colorTitles"
             android:textSize="22sp"
+            android:paddingBottom="4dp"
             app:layout_constraintBottom_toTopOf="@id/album_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +64,7 @@
             android:textAlignment="center"
             android:textColor="@color/colorSubtitles"
             android:textSize="18sp"
+            android:paddingBottom="4dp"
             app:layout_constraintBottom_toTopOf="@id/artist_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -76,6 +78,7 @@
             android:textAlignment="center"
             android:textColor="@color/colorTitles"
             android:textSize="20sp"
+            android:paddingBottom="4dp"
             app:layout_constraintBottom_toTopOf="@id/position_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
