--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -11,11 +11,9 @@
         android:layout_width="match_parent"
         android:layout_height="4dp"
         android:indeterminate="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
         app:mpb_progressStyle="horizontal"
         app:mpb_useIntrinsicPadding="false" />
 
@@ -36,14 +34,14 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/tracks_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0"
-        tools:itemCount="10"
+        tools:itemCount="40"
         tools:listitem="@layout/track_item" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
