--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,11 @@
         <item name="android:paddingEnd">30dp</item>
     </style>
 
+    <style name="SmallPlaybackButton" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="android:paddingStart">30dp</item>
+        <item name="android:paddingEnd">30dp</item>
+    </style>
+
     <style name="PlaybackText" parent="Widget.MaterialComponents.TextView">
         <item name="android:layout_marginStart">12dp</item>
         <item name="android:layout_marginTop">8dp</item>
